testdata/baselines/reference/conformance/typeTagForMultipleVariableDeclarations.errors.txt
typeTagForMultipleVariableDeclarations.js(1,12): error TS8010: Type annotations can only be used in TypeScript files.


==== typeTagForMultipleVariableDeclarations.js (1 errors) ====
    /** @type {number} */
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var x,y,z;
    x
    y
    z
    